--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.6",
     "spin.js": "^4.1.1",
     "tui-pagination": "^3.4.1"
   },
